--- a/HomeLoan/pom.xml
+++ b/HomeLoan/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.lti</groupId>
-	<artifactId>cruddemo</artifactId>
+	<artifactId>LTIHomeLoan</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>cruddemo</name>
