--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "login",
+  "name": "angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "nx serve",
-    "build": "nx build",
-    "watch": "nx build --watch --configuration development",
-    "test": "nx test"
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -25,13 +25,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.5",
-    "@angular-devkit/core": "^19.1.5",
-    "@angular-devkit/schematics": "^19.1.5",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
-    "@nx/angular": "21.2.0",
-    "@nx/workspace": "21.2.0",
-    "@schematics/angular": "^19.1.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -39,7 +34,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "nx": "21.2.0",
     "typescript": "~5.7.2"
   }
 }
